@@ -1544,7 +1544,7 @@ form {
 	margin-top     : 4px;
 }
 .sidenote .fivesixth, .sidenote .fivesixths { 
-	width       : 83%;
+	width       : 80%;
 }
 .sidenote .sixth { 
 	width       : 14%;
@@ -1694,9 +1694,13 @@ div.half {
 	width : 47%;
 	padding-left : 2px;
 }
+
 .sidenote a.half { 
-	width : 48%;
-	padding-left : 2px;
+	width         : 48%;
+	padding-left  : 1%;
+	padding-right : 0;
+	margin-left   : 0;
+	margin-right  : 0;
 }
 
 .main span.half { 
